<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">storq</string>
    <string name="action_settings">settings</string>
    <string name="title_section1">inbox</string>
    <string name="title_section2">friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="login_button_label">sign in</string>
    <string name="sign_up_text">don\'t have an account? sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">retype e-mail</string>
    <string name="sign_up_button_label">sign up</string>
    <string name="signup_error_message">please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">oops!</string>
    <string name="login_error_message">please make sure you enter a username and password!</string>
    <string name="login_error_title">oops!</string>
    <string name="menu_logout_label">logout</string>
    <string name="empty_inbox_label">no new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">we\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="menu_text_label">Text</string>
    <string name="error_external_storage">there was a problem accessing your device\'s external storage.</string>
    <string name="general_error">sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>
    <string name="facebook_app_id">405243752968279</string>
        <string name="forget_error_message">please make sure you enter correct email!</string>
    <string name="forget_error_title">oops!</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string-array name="text_choices">
        <item>      would you like to log out?</item>
    </string-array>
    <string-array name="gender_array">
        <item>male</item>
        <item>female</item>
        <item>prefer not to say</item>
    </string-array>

    <string name="spinner_title">select gender</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">we\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Storq</string>
    <string name="content_desc_background">Storq Background Image</string>
    <string name="subtitle">‘selflessness’ is inherently self-rewarding</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">"new storq from "</string>
    <string name="title_activity_get">Send Us Feedback</string>
    <string name="title_activity_view_text">ViewTextActivity</string>
    <string name="title_activity_random">RandomActivity</string>
    <string name="title_activity_gesture">GestureActivity</string>
    <string name="title_activity_user_details">user details</string>
    <string name="app_id">405243752968279</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="gender">gender</string>
    <string name="email">email</string>
    <string name="title_activity_send_storq">SendStorqActivity</string>
    <string name="title_activity_gesture2">Gesture2Activity</string>
    <string name="title_activity_new_gesture">NewGestureActivity</string>
    <string name="feedback_respond">Thank you for your feedback</string>
    <string name="no_storq">no storq found</string>
    <string name="feedback_request"> We’d love to hear from you!</string>
    <string name="searching_storq">searching...</string>

    <color name="black">#000000</color>

    <string name="title_activity_geocode_test">GeocodeTest</string>
    <string name="title_activity_splash">Splash</string>
    <string name="sending_storq">sending storq</string>
    <string name="bad_words_msg">message contains bad words.. unable to send</string>
    <string name="profanity_error">please remove profanity from message and resend</string>
    <string name="facebook_id">405243752968279</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="request_password">request password</string>
    <string name="email_verify_01">"We've sent an email to your email."</string>
    <string name="email_verfy_02">"Click the link in the email to reset your password. "</string>
    <string name="forget_title_notif">Hi there!</string>

</resources>
