<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity" >

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:textColor="@android:color/black" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"
            android:textColor="@android:color/black" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Select gender"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/AuthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/gender_array"
            android:prompt="@string/spinner_title"
            android:text="Select Gender"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/selectDateButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Birthdate"
            android:onClick="showDatePickerDialog" />

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:text="@string/sign_up_button_label" />

</RelativeLayout>